styles/base.css
header {
    width: auto;
    height: auto;
}

.title {
    display: block;
    background-color: rgb(41, 76, 107);
    padding: 20px;
    color: #fff;
    text-align: center;
    font-family: monospace;
    font-size: 1.5em;
}

.links {
    display: flex;
    justify-content: space-evenly;
    background-color: rgb(40, 39, 39);
    padding: 10px;
}

.links a {
    display: block;
    text-decoration: none;
    color: #fff;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 1em;

}

nav a:hover {
    text-decoration: underline;
}

.name {
    font-family: Arial, Helvetica, sans-serif;
    text-align: center;
    padding-top: 10px;
}

section img {
    display: block;
    border: 1px solid gray;
    width: 230px;
    margin: 20px;
}

.card {
    display: block;
    border: 2px solid gray;
    border-radius: 0.5em;
    padding: 1em;
}

.aboutme {
    display: grid;
    grid-template-columns: 70% 30%;
}

.paragraphs {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    letter-spacing: 0.5px;
}

h2,
h4 {
    display: block;
    background-color: rgb(41, 76, 107);
    color: #fff;
    text-align: center;
    padding: 10px;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 1.25em;
    border-radius: 0.5em;
}

h3 {
    text-align: center;
    border-bottom: 1.5px solid #949494;
    width: 30em;
    padding: 10px;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 1.25em;
}

.saltillo {
    display: grid;
    grid-template-columns: 30% 70%;
}

.saltillo-image {
    position: relative;
    right: 3.5rem;
    bottom: 2em;
}

main {
    width: auto;
    height: auto;
}

.cards {
    display: grid;
    grid-template-columns: 70% 30%;
    gap: 5px;
}

footer {
    display: block;
    background-color: rgb(41, 76, 107);
    color: #fff;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 1.1em;
    padding: 1px;
    text-align: center;
    margin: 20px;
}

.current-year {
    color: rgb(224, 217, 79);
}

